@@ -34,6 +34,7 @@ Added support for implicit return with value 0 from main
 Added support for multi token integer types (`unsigned int`, `long long`, `long long int`, etc.)
 Added support arrays on the stack
 Added support for using variables in `sizeof`, including dereferencing
+Added support for variables in loop bodies
 
 * 1.11 - 2023-11-01
 ** Added
